# sonya

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: linux_utils.h  sonya_utils.h  win_utils.h
src/: linux_utils.cpp  main.cpp  sonya_utils.cpp  win_utils.cpp
